<resources>
    <string name="app_name">Block Match</string>
    <string name="app_author">By Derrick Kyle Ward</string>
    <string name="gameMode">GameMode</string>
    <string name="score">Score</string>
    <string name="gameLogoContentDescription">Game Logo</string>
    <string name="leadershipBoardTitle">Leadership Board</string>
    <string name="joinCompetitionButton">Join Competition</string>
    <string name="navMenuHowTo">How To</string>
    <string name="navMenuAboutAuthor">About Game Author</string>
    <string name="navMenuPlayGame">Join the Competition</string>
    <string name="navMenuLeadershipBoard">Check Leadership Boards</string>
    <string name="navMenuMessages">View Messages</string>
    <string name="navMenuSettings">Settings</string>
    <string name="navMenuLogOut">Log Out</string>
    <string name="gameAuthorBio">My name is Derrick Kyle Ward. I am a Computer Engineer (BS, Working on MS). I am West Indian and my family hails from the countries of Barbados and St. Vincent. I currently work as a Software Engineer. I enjoy reading autobiographies, science-fiction, cyberpunk, and historical non-fiction. My favorite sports to play are ping pong and basketball. I hope you enjoy the game. It\'s my first published one. I will continue to iterate and improve.</string>
    <string name="chatMessagesTitle">Current Conversations</string>
    <string name="cameraRequestBlocked">Block Match needs access to camera in order for you to take a profile photo. Please update Block Match\'s permissions from phone settings.</string>
    <string name="readStorageRequestBlocked">Block Match needs access to your storage in order for you to select a profile photo from your existing photos. Please update Block Match\'s permissions from phone settings.</string>
    <string name="onGoingGameHeader">Find the Matching Pairs</string>
</resources>