<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/howTo"
            android:title="@string/navMenuHowTo"
            android:icon="@drawable/instructions"
            />
        <item
            android:id="@+id/aboutAuthorItem"
            android:title="@string/navMenuAboutAuthor"
            android:icon="@drawable/about_author"
            />
        <item
            android:id="@+id/playGameItem"
            android:title="@string/navMenuPlayGame"
            android:icon="@drawable/puzzle"
            />
        <item
            android:id="@+id/leadershipBoardItem"
            android:title="@string/navMenuLeadershipBoard"
            android:icon="@drawable/carousel"
            />
        <item
            android:id="@+id/messagesItem"
            android:title="@string/navMenuMessages"
            android:icon="@drawable/chat"
            />
        <item
            android:id="@+id/settingsItem"
            android:title="@string/navMenuSettings"
            android:icon="@drawable/settings"
            />
    </group>
</menu>